--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
+    "chart.js": "^4.4.5",
     "chartjs-plugin-zoom": "^2.0.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.453.0",
