--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
+    "@types/underscore": "^1.13.0",
     "chart.js": "^4.4.5",
     "chartjs-plugin-zoom": "^2.0.1",
     "date-fns": "^4.1.0",
@@ -32,6 +33,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
+    "underscore": "^1.13.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
