--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.4.5",
     "chartjs-plugin-zoom": "^2.0.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
