feat. api url env파일로 가져와 사용하게 수정

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,6 +10,7 @@ env:
   REACT_APP_KAKAOMAP_KEY: ${{secrets.REACT_APP_KAKAOMAP_KEY}}
   REACT_APP_ACCOUNT_CLIENT_ID: ${{secrets.REACT_APP_ACCOUNT_CLIENT_ID}}
   REACT_APP_ACCOUNT_STATE: ${{secrets.REACT_APP_ACCOUNT_STATE}}
+  REACT_APP_API_URL: ${{secrets.REACT_APP_API_URL}}
 
 permissions:
   id-token: write
